panel: Add style class for orientation to PanelAppletFrame

Add style class "horizontal" or "vertical" based on the orientation
  of the PanelAppletFrame. This allows themeing to adjust styling for
  vertical panels. An example selector would be:

  PanelAppletFrame.vertical {
    background-image: -gtk-gradient (linear, right top, left top,
                                     from (shade (@dark_bg_color, 1.15)),
                                     to (shade (@dark_bg_color, 0.95)));
   }

Signed-off-by: Peter Hurley <peter@hurleysoftware.com>

https://bugzilla.gnome.org/show_bug.cgi?id=672070